Fix bugs, update controllers
